[BE] fix : 날씨 city만 조회 오류 해결